[frontend]fix small page jumping page color problem

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -13,7 +13,7 @@
 @include mat-core();
 
 .main-theme {
-$my-app-primary: mat-palette($mat-grey, 50);
+$my-app-primary: mat-palette($mat-blue, 700);
 $my-app-accent:  mat-palette($mat-blue, 700);
 $my-app-warn:    mat-palette($mat-deep-orange);
 $my-app-background: mat-palette($mat-deep-orange);
@@ -24,7 +24,7 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 }
 // $mat-cyan, 600
 .alternate-theme {
-$my-app-primary: mat-palette($mat-grey, 800);
+$my-app-primary: mat-palette($mat-purple, 800);
 $my-app-accent:  mat-palette($mat-blue, 700);
 $my-app-warn:    mat-palette($mat-deep-orange);
 $my-app-background: mat-palette($mat-deep-orange);
